Created static patcher header

--- a/patcher/patcher.vcxproj.filters
+++ b/patcher/patcher.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="IPatch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PatchStatic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
