--- a/patcher/patcher.vcxproj.filters
+++ b/patcher/patcher.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClInclude Include="PatchStatic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PatchDynamic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
